color contrast fix

--- a/week03/styles/overlay.css
+++ b/week03/styles/overlay.css
@@ -65,7 +65,7 @@ footer {
 	margin: 1rem;
 	border-top: 1px solid #000;
 	padding: 0.5rem;
-	color: navy;
+	color: rgb(0, 0, 225);
 	font-weight: 700;
 	font-style: italic;
 }
